Code for presentation version 1

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <div class="app">
       <h1>Procedural Art in Javascript</h1>
       <div class="canvas-container">
-        <canvas id="myCanvas"></canvas>
+        <canvas id="myCanvas" height="512px" width="512px"></canvas>
       </div>
     </div>
   </body>
+  <script src="main.js"></script>
 </html>
