Generative art example version 1

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <div class="canvas-container">
         <canvas id="myCanvas" height="512px" width="512px"></canvas>
       </div>
+      <button id="refresh">Refresh Image</button>
+      <button id="stopDrawing">Stop Drawing</button>
     </div>
   </body>
   <script src="main.js"></script>
